<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/board"
                android:orientation="vertical" >

    <Button
        android:id="@+id/btnreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToGameText"
        android:background="@drawable/btn"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="33dp"
        android:textColor="#ffffff"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:background="#0d116c"
        android:gravity="center"
        android:clickable="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="false"
            android:gravity="center"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:text="@string/youKilledText"
                android:textSize="24dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/killedEnemy"
                android:editable="false"
                android:clickable="false"
                android:textColor="#ffffff"
                android:background="#0d116c"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/killedEnemy"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/editText3"
                android:text=" 0 "
                android:textColor="#ffa528"
                android:editable="false"
                android:textSize="24dp"
                android:autoText="false"
                android:background="#0d116c"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:text="@string/enemiesText"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:editable="false"
                android:textSize="24dp"
                android:textColor="#ffffff"
                android:background="#0d116c"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="false"
            android:layout_toLeftOf="@+id/editText3"
            android:gravity="center"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:text="@string/currentRecordText"
                android:editable="false"
                android:textSize="24dp"
                android:textColor="#ffffff"
                android:background="#0d116c"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recordKilledEnemy"
                android:textSize="24dp"
                android:text=" 0 "
                android:editable="false"
                android:textColor="#ffa528"
                android:background="#0d116c"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:text="@string/enemiesText"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:editable="false"
                android:textSize="24dp"
                android:textColor="#ffffff"
                android:background="#0d116c"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>